<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="movie_name" />
    <string name="overview">Overview</string>
    <string-array name="movie_title">
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon</item>
        <item>Avengers: Infinity War</item>
        <item>Master Z: Ip Man Legacy</item>
        <item>Mortal Engines</item>
        <item>Overlord</item>
        <item>Robin Hood</item>
    </string-array>
    <string-array name="movie_release">
        <item>April 30, 2019</item>
        <item>May 17, 2019</item>
        <item>March 12, 2019</item>
        <item>February 16, 2018</item>
        <item>December 14, 2018</item>
        <item>October 5, 2018</item>
        <item>November 2, 2018</item>
        <item>April 12, 2019</item>
        <item>November 16, 2018</item>
        <item>December 14, 2018</item>
    </string-array>
    <string-array name="movie_overview">
        <item>The quiet family life of Nels Coxman, a snowplow driver, is upended after his sons murder. Nels begins a vengeful hunt for Viking, the drug lord he holds responsible for the killing, eliminating Vikings associates one by one. As Nels draws closer to Viking, his actions bring even more unexpected and violent consequences, as he proves that revenge is all in the execution.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his causeelevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>As the son of a Viking leader on the cusp of manhood, shy Hiccup Horrendous Haddock 3 faces a rite of passage: he must kill a dragon to prove his warrior mettle. But after downing a feared dragon, he realizes that he no longer wants to destroy it, and instead befriends the beast which he names Toothless much to the chagrin of his warrior father</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Following his defeat by Master Ip, Cheung Tin Chi (Zhang) tries to make a life with his young son in Hong Kong, waiting tables at a bar that caters to expats. But it s not long before the mix of foreigners, money, and triad leaders draw him once again to the fight.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>France, June 1944. On the eve of D Day, some American paratroopers fall behind enemy lines after their aircraft crashes while on a mission to destroy a radio tower in a small village near the beaches of Normandy. After reaching their target, the surviving paratroopers realise that, in addition to fighting the Nazi troops that patrol the village, they also must fight against something else.</item>
        <item>A war hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
    </string-array>
    <string-array name="movie_director">
        <item>Hans Petter Moland</item>
        <item>Steven Caple Jr.</item>
        <item>David Yates</item>
        <item>M. Night Shyamalan</item>
        <item>Dean DeBlois</item>
        <item>Anthony Russo</item>
        <item>Yuen Woo ping</item>
        <item>Christian Rivers</item>
        <item>Julius Avery</item>
        <item>Otto Bathurst</item>
    </string-array>
    <string-array name="movie_runtime">
        <item>1h 59m</item>
        <item>2h 10m</item>
        <item>2h 14m</item>
        <item>2h 9m</item>
        <item>1h 40m</item>
        <item>2h 29m</item>
        <item>1h 47m</item>
        <item>2h 9m</item>
        <item>1h 50m</item>
        <item>1h 56m</item>
    </string-array>
    <string-array name="tvshow_title">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>The Flash</item>
        <item>God Friended Me</item>
        <item>Gotham</item>
        <item>Greys Anatomy</item>
        <item>Hanna</item>
        <item>Riverdale</item>
    </string-array>
    <string-array name="tvshow_release">
        <item>2012</item>
        <item>2019</item>
        <item>1986</item>
        <item>2009</item>
        <item>2014</item>
        <item>2018</item>
        <item>2014</item>
        <item>2005</item>
        <item>2019</item>
        <item>2017</item>
    </string-array>
    <string-array name="tvshow_creator">
        <item>Greg Berlanti</item>
        <item>Jeremy Carver</item>
        <item>Akira Toriyama</item>
        <item>Hiro Mashima</item>
        <item>Geoff Johns</item>
        <item>Steven Lilien</item>
        <item>Bruno Heller</item>
        <item>Shonda Rhimes</item>
        <item>David Farr</item>
        <item>Roberto Aguirre and Sacasa</item>
    </string-array>
    <string-array name="tvshow_runtime">
        <item>42m</item>
        <item>60m</item>
        <item>25m</item>
        <item>25m</item>
        <item>44m</item>
        <item>42m</item>
        <item>43m, 60m</item>
        <item>43m</item>
        <item>50m</item>
        <item>45m</item>
    </string-array>
    <string-array name="tvshow_overview">
        <item>Spo Doom Patrols members each suffered horrible accidents that gave them superhuman abilities but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence and to protect Earth from what they find.</item>
        <item>Loniled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>Theg ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Gokus home. Together, they set off to find all seven and to grant her wish.</item>
        <item>Lucy is a 17 year old girl, who wants to be a full fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu is not just any ordinary kid, he is a member of one of the worlds most infamous mage guilds: Fairy Tail.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel.</item>
        <item>A self-proclaimed pesky atheist is encouraged to help strangers by someone claiming to be God who friends him on Facebook.</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime world s greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon s story and his rise from rookie detective to Police Commissioner</item>
        <item>Follows the personal and professional lives of a group of doctors at Seattle s Grey Sloan Memorial Hospital.</item>
        <item>This thriller and coming of age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>Set in the present, the series offers a bold, subversive take on Archie, Betty, Veronica and their friends, exploring the surreality of small town life, the darkness and weirdness bubbling beneath Riverdale s wholesome facade.</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_home">Change your home</string>
    <string name="content_tab_profile">Change your profile</string>
    <string name="tab_text_1">MOVIES</string>
    <string name="tab_text_2">TV SHOW</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="value_title">Value Title</string>
    <string name="Director">Director</string>
    <string name="value_director">Value Director</string>
    <string name="release">Release</string>
    <string name="value_release">Value Release</string>
    <string name="value_overview">Value Overview</string>
    <string name="runtime">Runtime</string>
    <string name="value_runtime">Value Runtime</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="change_language_settings">Change language</string>
    <string name="popularity">Popularity</string>
    <string name="value_popularity">Value popularity</string>
    <string name="vote_average">Vote Average</string>
    <string name="value_vote_average">Value Vote Average</string>
    <string name="image_movie">Image Movie</string>
    <string name="favorite">Favorite</string>
    <string name="item_favorite">item_favorite</string>
    <string name="btn_favorite">favorite</string>
    <string name="movie_type">type</string>
    <string name="fav_added">Favorite telah ditambahkan</string>
    <string name="fav_delete">Favorite telah dihapus</string>
    <string name="search">search</string>
    <string name="search_hint">input title movie or tvshow</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
</resources>