<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_fav_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"
            android:contentDescription="@string/image_favorite" />

        <TextView
            android:id="@+id/tv_fav_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_fav_poster"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tv_fav_title"
            android:layout_marginStart="14dp"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:text="@string/movie_type" />

        <TextView
            android:id="@+id/tv_fav_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_fav_poster"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/movie_name" />

        <TextView
            android:id="@+id/tv_fav_overview"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_below="@id/tv_fav_type"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@id/img_fav_poster"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="@string/overview" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_fav_poster"
            android:orientation="horizontal">
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>